hphp/test/zend/good/ext/zip/tests/bug7214.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
/* $Id$ */
if(!extension_loaded('zip')) die('skip');
}
