hphp/test/zend/bad/ext/pdo_mysql/tests/pdo_mysql_class_constants.php.skipif
<?php
require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'skipif.inc');
if (!extension_loaded('mysqli') && !extension_loaded('mysqlnd')) {
	/* Need connection to detect library version */
	require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'mysql_pdo_test.inc');
	MySQLPDOTest::skip();
}
?>